--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,3 +30,22 @@ jobs:
         run: |
               docker build . --tag ghcr.io/ionicerp/customer_fe_angular:latest
               docker push ghcr.io/ionicerp/customer_fe_angular:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up kubeconfig
+      run: echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
+
+    - name: Create Docker registry secret
+      run: |
+        export KUBECONFIG=kubeconfig
+        kubectl create secret docker-registry my-github-secret --docker-server=ghcr.io --docker-username=${{ secrets.MY_GITHUB_USERNAME }} --docker-password=${{ secrets.MY_GITHUB_TOKEN }} || true
+
+    - name: Deploy to Kubernetes
+      run: |
+        export KUBECONFIG=kubeconfig
+        kubectl apply -f Deployment.yaml  # replace with your deployment file path
