--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,7 @@ jobs:
               docker push ghcr.io/ionicerp/customer_fe_angular:latest
 
   deploy:
+    needs: build-and-push-image
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
