--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,10 +41,10 @@ jobs:
     - name: Set up kubeconfig
       run: echo "${{ secrets.KUBECONFIG }}" | base64 -d > kubeconfig
 
-    - name: Create Docker registry secret
-      run: |
-        export KUBECONFIG=kubeconfig
-        kubectl create secret docker-registry my-github-secret --docker-server=ghcr.io --docker-username=${{ secrets.MY_GITHUB_USERNAME }} --docker-password=${{ secrets.MY_GITHUB_TOKEN }} || true
+    # - name: Create Docker registry secret
+    #   run: |
+    #     export KUBECONFIG=kubeconfig
+    #     kubectl create secret docker-registry my-github-secret --docker-server=ghcr.io --docker-username=${{ secrets.MY_GITHUB_USERNAME }} --docker-password=${{ secrets.MY_GITHUB_TOKEN }} || true
 
     - name: Deploy to Kubernetes
       run: |
